2004-07-16  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_font.c (_cairo_font_copy): Fixed stupid typo.
	Added decleration of _cairo_glyph_cache_destroy.

2004-07-15  David Reveman  <c99drn@cs.umu.se>

	* src/cairo_font.c (_cairo_font_copy): Destroy glyph cache
	created by font backend.

2004-07-11  Carl Worth  <cworth@isi.edu>

	* src/cairo_gstate.c (_cairo_gstate_init_clip): Don't call
	_cairo_surface_set_clip_region with a NULL surface.

2004-07-09  Carl Worth  <cworth@isi.edu>

	* src/cairo_gstate.c (_cairo_gstate_arc_dir): Fix numerical
	problem that could lead to infinite loops.

2004-07-09  Dave Beckett  <Dave.Beckett@bristol.ac.uk>

	* autogen.sh: Require automake 1.7 (and thus aclocal 1.7) which
	requires autoconf 2.54. Changed since newer libtools may fail to
	work with older automake versions such as 1.4.  I bet this will
	annoy people with older tool chains :(

2004-07-05  Carl Worth  <cworth@isi.edu>

	* src/cairo.c (CAIRO_CHECK_SANITY): Remove errant semicolon from
	macro definition.

2004-06-21  David Reveman  <c99drn@cs.umu.se>

	* configure.in: Require glitz >= 0.1.5.

	* src/cairo_gstate.c (_cairo_gstate_clip_and_composite_trapezoids): 
	Use correct source offset when creating clip surface.

	* src/cairo_gl_surface.c (_cairo_gl_surface_get_image): Use glitz's
	new pixel interface.
	(_cairo_gl_surface_set_image): Use glitz's new pixel interface.
	(_cairo_gl_surface_create_similar): First try to create a drawable
	surface and if that fails, create a read only surface.
	(_cairo_gl_surface_create_similar): Glitz now handles inheritance of
	anti-aliasing hints, so it can be removed from here.
	(_cairo_gl_surface_create_pattern): Temporary fix for gradients.

2004-06-16  Keith Packard  <keithp@keithp.com>

	* src/cairo_xcb_surface.c: (bytes_per_line),
	(_cairo_xcb_surface_set_image):
	Fix image data length computation (XCB doesn't do this part).

2004-06-11  David Reveman  <c99drn@cs.umu.se>

	* configure.in: Require glitz 0.1.4.
