@@ -1,3 +1,14 @@
+2004-07-20  David Reveman  <c99drn@cs.umu.se>
+
+	* src/cairo_gl_surface.c (_cairo_gl_surface_get_image): Use new 
+	pixel buffer interface.
+	(_cairo_gl_surface_set_image): Use new pixel buffer interface.
+	(_cairo_gl_surface_set_filter): Don't use convolution filter for
+	gaussian filter type as we have no software fall-back.
+	(_cairo_gl_surface_create_pattern): Color ranges now need a surface
+	reference.
+	Added new CAIRO_GL_SURFACE_IS_DRAWABLE macro.
+
 2004-07-16  David Reveman  <c99drn@cs.umu.se>
 
 	* src/cairo_font.c (_cairo_font_copy): Fixed stupid typo.
